--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,3 +1,4 @@
-<p class="credit">
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }}. Powered by <a href="http://octopress.org">Octopress</a>
+<p>
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
