--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,9 +1,8 @@
-{% if site.gravatar_header %}
-  <img src="{% gravatar_image 200 %}" alt="Gravatar of {{ site.author}} " title="Gravatar of {{ site.author }}" class="profilepic" />
-{% endif %}
 <hgroup>
-  <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
-  {% if site.subtitle %}
-    <h2 class="subtitle">{{ site.subtitle }}</h2>
-   {% endif %}
+  <div id="header-inner">
+    <span class="first"><a href="{{ root_url }}/">{{ site.title }}</a></span>
+    <span><a href="{{ root_url }}/about">about</a></span>
+    <span><a href="http://www.github.com/">projects</a></span>
+    <span class="last"><a href="{{ site.subscribe_rss }}" title="subscribe via RSS">rss</a></span>
+  </div>
 </hgroup>
